--- a/halo2-base/Cargo.toml
+++ b/halo2-base/Cargo.toml
@@ -14,6 +14,7 @@ ff = "0.12"
 
 # Use Axiom's custom halo2 monorepo for faster proving when feature = "halo2-axiom" is on
 halo2_proofs_axiom = { git = "https://github.com/axiom-crypto/halo2.git", tag = "v2023_01_17", package = "halo2_proofs", optional = true }
+
 # Use PSE halo2 and halo2curves for compatibility when feature = "halo2-pse" is on
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_01_20", optional = true }
 
@@ -36,7 +37,10 @@ mimalloc = { version = "0.1", default-features = false, optional = true }
 
 [features]
 default = ["halo2-axiom", "display"]
-dev-graph = ["halo2_proofs?/dev-graph", "halo2_proofs_axiom?/dev-graph", "plotters"]
+# default = ["halo2-pse", "display"]
+dev-graph = ["halo2_proofs?/dev-graph", 
+"halo2_proofs_axiom?/dev-graph", 
+"plotters"]
 halo2-pse = ["halo2_proofs"]
 halo2-axiom = ["halo2_proofs_axiom"]
 display = []
