--- a/hashes/zkevm-keccak/Cargo.toml
+++ b/hashes/zkevm-keccak/Cargo.toml
@@ -28,6 +28,8 @@ env_logger = "0.10"
 
 [features]
 default = ["halo2-axiom", "display"]
+# default = ["halo2-pse", "display"]
+
 display = ["halo2-base/display"]
 halo2-pse = ["halo2-base/halo2-pse"]
 halo2-axiom = ["halo2-base/halo2-axiom"]
